Fix padding on small screen

--- a/Main/static/assets/css/homepage.css
+++ b/Main/static/assets/css/homepage.css
@@ -166,7 +166,7 @@
     @media (max-width: 790px) {
 
         #homepage {
-            padding: 60px;
+            padding: 35% 60px;
         }
 
     }
